# shiitake

./: README.md  pyproject.toml
shiitake/: __main__.py  main.py
